@@ -11,6 +11,8 @@ use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::Deep;
 use JSON::Schema::Modern;
 use JSON::Schema::Modern::Utilities 'canonical_schema_uri';
+use lib 't/lib';
+use Helper;
 
 subtest 'traversal with callbacks' => sub {
   my $schema = {
@@ -102,6 +104,119 @@ subtest 'vocabularies used during traversal' => sub {
       },
     ],
     'error within $defs is found, showing both Core and Applicator vocabularies are used',
+  );
+};
+
+subtest 'traverse with overridden metaschema_uri' => sub {
+  my $js = JSON::Schema::Modern->new;
+  $js->add_schema({
+    '$id' => 'https://metaschema/with/wrong/spec',
+    '$vocabulary' => {
+      'https://unknown' => true,
+      'https://unknown2' => false,
+    },
+  });
+  my $state = $js->traverse(true, { metaschema_uri => 'https://metaschema/with/wrong/spec' });
+  cmp_deeply(
+    [ map $_->TO_JSON, @{$state->{errors}} ],
+    my $errors = [
+      {
+        instanceLocation => '',
+        keywordLocation => '/$vocabulary/https:~1~1unknown',
+        absoluteKeywordLocation => 'https://metaschema/with/wrong/spec#/$vocabulary/https:~1~1unknown',
+        error => '"https://unknown" is not a known vocabulary',
+      },
+      {
+        instanceLocation => '',
+        keywordLocation => '/$vocabulary',
+        absoluteKeywordLocation => 'https://metaschema/with/wrong/spec#/$vocabulary',
+        error => 'the first vocabulary (by evaluation_order) must be Core',
+      },
+      {
+        instanceLocation => '',
+        keywordLocation => '',
+        error => '"https://metaschema/with/wrong/spec" is not a valid metaschema',
+      },
+    ],
+    'metaschema_uri is overridden with a bad schema: same errors are returned',
+  );
+
+  $state = $js->traverse(
+    { '$id' => 'https://my-poor-schema/foo.json' },
+    { metaschema_uri => 'https://metaschema/with/wrong/spec' });
+  cmp_deeply(
+    [ map $_->TO_JSON, @{$state->{errors}} ],
+    [
+      @{$errors}[0..1],
+      {
+        %{$errors->[2]},
+        absoluteKeywordLocation => 'https://my-poor-schema/foo.json',
+      },
+    ],
+    'metaschema_uri is overridden with a bad schema: errors contain the right locations',
+  );
+
+
+  $state = $js->traverse(
+    true,
+    {
+      metaschema_uri => 'https://metaschema/with/wrong/spec',
+      initial_schema_uri => 'https://my-poor-schema/foo.json#/$my_dialect_is',
+    });
+  cmp_deeply(
+    [ map $_->TO_JSON, @{$state->{errors}} ],
+    [
+      {
+        %{$errors->[0]},
+        keywordLocation => '/$my_dialect_is'.$errors->[0]{keywordLocation},
+      },
+      {
+        %{$errors->[1]},
+        keywordLocation => '/$my_dialect_is'.$errors->[1]{keywordLocation},
+      },
+      {
+        %{$errors->[2]},
+        keywordLocation => '/$my_dialect_is'.$errors->[2]{keywordLocation},
+        absoluteKeywordLocation => 'https://my-poor-schema/foo.json#/$my_dialect_is',
+      },
+    ],
+    'metaschema_uri is overridden with a bad schema and there is a traversal path: errors contain the right locations',
+  );
+
+
+  $js->add_schema({
+    '$id' => 'https://my/first/metaschema',
+    '$vocabulary' => {
+      'https://json-schema.org/draft/2020-12/vocab/applicator' => true,
+      'https://json-schema.org/draft/2020-12/vocab/core' => true,
+      # note: no validation!
+    },
+  });
+
+  $state = $js->traverse(
+    {
+      '$id' => my $id = 'https://my/first/schema/with/custom/metaschema',
+      # note: no $schema keyword!
+      allOf => [ { minimum => 'not even an integer' } ],
+    },
+    { metaschema_uri => 'https://my/first/metaschema' },
+  );
+
+  cmp_deeply(
+    $state->{identifiers},
+    [
+      str($id),
+      {
+        canonical_uri => str($id),
+        path => '',
+        specification_version => 'draft2020-12',
+        vocabularies => [
+          map 'JSON::Schema::Modern::Vocabulary::'.$_,
+            qw(Core Applicator),
+        ],
+      }
+    ],
+    'determined vocabularies to use for this schema',
   );
 };
 
