@@ -4,6 +4,7 @@ Revision history for JSON-Schema-Modern
           - some refactoring of vocabulary and document methods, to faciliate
             re-use
           - new utility functions: is_uri_reference, assert_keyword_exists
+          - allow specifying the metaschema_uri for a schema document
 
 0.523     2021-10-24 05:58:27Z
           - fix tests that were relying on an optional prereq
